Squashed commit of the following:
commit 979ad2c2da5eff912cc8f412525988cc70454146
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 15:06:55 2023 +0200

    update readme.md

commit d164e9d6a90cc1e8d0b053853561185193c8d785
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 14:52:39 2023 +0200

    update readme.md

commit 685319ab9bd64244dbbccfce1fb0aa36e2c49181
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 14:49:19 2023 +0200

    update readme.md

commit 38329b1a3a7e8fb21fa231d7097d125988cc4df0
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 14:18:30 2023 +0200

    run CI tests for checking test results

commit 8c92e983e214cb9d18655b50a3afa993878d0828
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 14:16:45 2023 +0200

    run CI tests for checking test results

commit fb11b3789ce511d0786435de8e2ea5412f68292f
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 14:15:08 2023 +0200

    remove comments

commit 83e5ea367e3906bab50723b9d9e07f63af8b8d4c
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 14:13:04 2023 +0200

    refactor texas holdem

commit 1f6f1aadfd62f03bf869829798456d2eda5c49e2
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 13:20:11 2023 +0200

    run CI tests for checking test results

commit f438be51539891905d00dd0ec54497e30bc23b88
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 13:19:48 2023 +0200

    run CI tests for checking test results

commit f807e81c975e45d586e7731a67687e7a3be23cad
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 13:19:36 2023 +0200

    run CI tests for checking test results

commit 82916e7149ce37becf6a8e7397d70126d09de9f4
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 13:19:23 2023 +0200

    run CI tests for checking test results

commit d42559e9a6c2420de9f4d1a338585f6218def25e
Author: softwarewithcode <noreply>
Date:   Mon Nov 6 13:19:04 2023 +0200

    run CI tests for checking test results

commit e1ce7aefd50c497b0ecffb01e75b4d13d54fbe44
Author: softwarewithcode <norepl